HTMLParser.g4

parser grammar HTMLParser;

options { tokenVocab=HTMLLexer; }


main: void class*;

void:VOID MAIN AROW RUNAPP RUNAPP_OPEN MAIN_CLASS LEFT_BRAKETS RIGHT_BRAKETS RUNAPP_CLOSE VOID_CLOSE;

class: CLASS CLASS_NAME  CLASS_NAME_END  EXTENDS extend_class STATE_OPEN? STATE_CLASS? STATE_CLOSE? CLASS_OPEN class_body CLASS_CLOSE;
extend_class:BASE_CLASS|STATE ;
class_body:OVERRIDE? widget|state;
state:STATE_BODY STATE_OPEN STATE_CLASS STATE_CLOSE CREAT_STATE STATE_AROW STATE_MAIN_CLASS STATE_MAIN_CLASS_OPEN STATE_MAIN_CLASS_CLOSE STATE_MAIN_CLASS_SIMI;
widget:WIDGET BUILD BUILD_OPEN build_brakets BUILD_CLOSE  BUILD_BODY_OPEN build_body BUILD_BODY_CLOSE;
build_brakets:BUILDCONTEXT  CONTEXT;
build_body:RETURN MATERIALAPP MATERIALAPP_OPEN material_body MATERIALAPP_CLOSE MATERIAL_SIMI;
material_body:HOME DOT HOME_CLASS HOME_CLASS_OPEN home_body? HOME_CLASS_CLOSE HOME_CLASS_END;
home_body:BODY BODY_DOT (COLUMN|ROW) COLUMN_ROW_OPEN colum_row_body? COLUMN_ROW_CLOSE BODY_END;
colum_row_body: CHILDREN CHILDREN_DOT CHILDREN_OPEN children_body CHILDREN_CLOSE CHILDREN_END;
children_body:(stacks|neted_children_body);
stacks:stack*;
stack:STACK CHILD_OPEN stack_body? CHILD_CLOSE  CHILD_END;
stack_body:NESTED_CHILDREN NESTED_CHILDREN_DOT NESTED_CHILDREN_OPEN neted_children_body NESTED_CHILDREN_CLOSE NESTED_CHILDREN_END;
neted_children_body:nested_containers*;
nested_containers:(NESTED_CONTAINER|CONTAINER) CONTAINER_OPEN nested_container_body CONTAINER_CLOSE CONTAINER_CHILD_END;
nested_container_body: CHILD CHILD_DOT (attribut|nav);
attribut:img|text;
img:ATTRIBUT SINGLE_DOT NETWOEK ATTRIBUT_OPEN ATTRIBUT_DESCRIPTION ATTRIBUT_CLOSE ATTRIBUT_END;
text:ATTRIBUT ATTRIBUT_OPEN ATTRIBUT_DESCRIPTION ATTRIBUT_CLOSE ATTRIBUT_END;
nav:FLOATINGACTIONBUTTON BUTTON_OPEN ONPRESSED ONPRESSED_DOT ONPRESSED_OPEN ONPRESSED_CLOSE ONPRESSED_BODY_OPEN onpress_body ONPRESSED_BODY_CLOSE BUTTON_CLOSE;
onpress_body:NAVIGATOR NAVIGATOR_DOT PUSH PUSH_OPEN push_body PUSH_CLOSE NAVIGATOR_SIMI;
push_body:NAVIGATOR_CONTEXT NAVIGATOR_CONTEXT_SIMI MATERIALPAGEROUTE MATERIALPAGEROUTE_OPEN BUILDER BUILDER_DOT BUILDER_OPEN builder_brakets BUILDER_CLOSE MATERIALPAGEROUTE_BODY_OPEN material_page_rout_body MATERIALPAGEROUTE_BODY_CLOSE MATERIALPAGEROUTE_CLOSE NAVIGATOR_CONTEXT_END;
builder_brakets:BUILDER_BUILDCONTEXT BUILDER_CONTEXT;
material_page_rout_body:MATERIALPAGEROUTE_RETURN TARGET_CLASS TARGET_CLASS_OPEN TARGET_CLASS_CLOSE MATERIALPAGEROUTE_RETURN_SIMI;
