gen/HTMLParser.java
// Generated from java-escape by ANTLR 4.11.1
package gen;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEA_WS=1, VOID=2, CLASS=3, EXTENDS=4, BASE_CLASS=5, STATE=6, CLASS_OPEN=7, 
		MAIN=8, AROW=9, RUNAPP=10, RUNAPP_OPEN=11, VOID_CLOSE=12, MAIN_CLASS=13, 
		RUNAPP_CLOSE=14, LEFT_BRAKETS=15, RIGHT_BRAKETS=16, CLASS_NAME=17, CLASS_NAME_END=18, 
		STATE_OPEN=19, STATE_CLASS=20, STATE_CLOSE=21, OVERRIDE=22, STATE_BODY=23, 
		CREAT_STATE=24, STATE_AROW=25, STATE_SIMI=26, WIDGET=27, BUILD=28, BUILD_OPEN=29, 
		BUILD_BODY_OPEN=30, CLASS_CLOSE=31, STATE_MAIN_CLASS=32, STATE_MAIN_CLASS_OPEN=33, 
		STATE_MAIN_CLASS_CLOSE=34, STATE_MAIN_CLASS_SIMI=35, BUILDCONTEXT=36, 
		BUILD_CLOSE=37, CONTEXT=38, RETURN=39, MATERIALAPP=40, MATERIALAPP_OPEN=41, 
		MATERIAL_SIMI=42, BUILD_BODY_CLOSE=43, HOME=44, DOT=45, MATERIALAPP_CLOSE=46, 
		HOME_CLASS=47, HOME_CLASS_OPEN=48, HOME_CLASS_END=49, BODY=50, BODY_DOT=51, 
		COLUMN=52, ROW=53, BODY_END=54, COLUMN_ROW_OPEN=55, HOME_CLASS_CLOSE=56, 
		CHILDREN=57, CHILDREN_DOT=58, CHILDREN_OPEN=59, CHILDREN_END=60, COLUMN_ROW_CLOSE=61, 
		STACK=62, CONTAINER=63, CHILD_OPEN=64, NESTED_CHILDREN=65, CHILD_CLOSE=66, 
		CHILD_END=67, CHILDREN_CLOSE=68, NESTED_CHILDREN_DOT=69, NESTED_CHILDREN_OPEN=70, 
		NESTED_CHILDREN_END=71, NESTED_CONTAINER=72, NESTED_CONTAINER_END=73, 
		NESTED_CHILDREN_CLOSE=74, CONTAINER_OPEN=75, CONTAINER_CHILD_END=76, CHILD=77, 
		CHILD_DOT=78, ATTRIBUT=79, SINGLE_DOT=80, FLOATINGACTIONBUTTON=81, NETWOEK=82, 
		ATTRIBUT_OPEN=83, ATTRIBUT_END=84, CONTAINER_CLOSE=85, ATTRIBUT_DESCRIPTION=86, 
		ATTRIBUT_CLOSE=87, BUTTON_OPEN=88, ONPRESSED=89, ONPRESSED_BODY_OPEN=90, 
		BUTTON_CLOSE=91, ONPRESSED_DOT=92, ONPRESSED_OPEN=93, ONPRESSED_CLOSE=94, 
		NAVIGATOR=95, NAVIGATOR_DOT=96, PUSH=97, PUSH_OPEN=98, NAVIGATOR_SIMI=99, 
		ONPRESSED_BODY_CLOSE=100, NAVIGATOR_CONTEXT=101, NAVIGATOR_CONTEXT_SIMI=102, 
		PUSH_CLOSE=103, MATERIALPAGEROUTE=104, MATERIALPAGEROUTE_OPEN=105, BUILDER=106, 
		BUILDER_DOT=107, MATERIALPAGEROUTE_BODY_OPEN=108, MATERIALPAGEROUTE_CLOSE=109, 
		NAVIGATOR_CONTEXT_END=110, BUILDER_OPEN=111, BUILDER_BUILDCONTEXT=112, 
		BUILDER_CLOSE=113, BUILDER_CONTEXT=114, MATERIALPAGEROUTE_RETURN=115, 
		MATERIALPAGEROUTE_BODY_CLOSE=116, TARGET_CLASS=117, TARGET_CLASS_OPEN=118, 
		TARGET_CLASS_CLOSE=119, MATERIALPAGEROUTE_RETURN_SIMI=120, WHITESPACE1=121;
	public static final int
		RULE_main = 0, RULE_void = 1, RULE_class = 2, RULE_extend_class = 3, RULE_class_body = 4, 
		RULE_state = 5, RULE_widget = 6, RULE_build_brakets = 7, RULE_build_body = 8, 
		RULE_material_body = 9, RULE_home_body = 10, RULE_colum_row_body = 11, 
		RULE_children_body = 12, RULE_stacks = 13, RULE_stack = 14, RULE_stack_body = 15, 
		RULE_neted_children_body = 16, RULE_nested_containers = 17, RULE_nested_container_body = 18, 
		RULE_attribut = 19, RULE_img = 20, RULE_text = 21, RULE_nav = 22, RULE_onpress_body = 23, 
		RULE_push_body = 24, RULE_builder_brakets = 25, RULE_material_page_rout_body = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "void", "class", "extend_class", "class_body", "state", "widget", 
			"build_brakets", "build_body", "material_body", "home_body", "colum_row_body", 
			"children_body", "stacks", "stack", "stack_body", "neted_children_body", 
			"nested_containers", "nested_container_body", "attribut", "img", "text", 
			"nav", "onpress_body", "push_body", "builder_brakets", "material_page_rout_body"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEA_WS", "VOID", "CLASS", "EXTENDS", "BASE_CLASS", "STATE", "CLASS_OPEN", 
			"MAIN", "AROW", "RUNAPP", "RUNAPP_OPEN", "VOID_CLOSE", "MAIN_CLASS", 
			"RUNAPP_CLOSE", "LEFT_BRAKETS", "RIGHT_BRAKETS", "CLASS_NAME", "CLASS_NAME_END", 
			"STATE_OPEN", "STATE_CLASS", "STATE_CLOSE", "OVERRIDE", "STATE_BODY", 
			"CREAT_STATE", "STATE_AROW", "STATE_SIMI", "WIDGET", "BUILD", "BUILD_OPEN", 
			"BUILD_BODY_OPEN", "CLASS_CLOSE", "STATE_MAIN_CLASS", "STATE_MAIN_CLASS_OPEN", 
			"STATE_MAIN_CLASS_CLOSE", "STATE_MAIN_CLASS_SIMI", "BUILDCONTEXT", "BUILD_CLOSE", 
			"CONTEXT", "RETURN", "MATERIALAPP", "MATERIALAPP_OPEN", "MATERIAL_SIMI", 
			"BUILD_BODY_CLOSE", "HOME", "DOT", "MATERIALAPP_CLOSE", "HOME_CLASS", 
			"HOME_CLASS_OPEN", "HOME_CLASS_END", "BODY", "BODY_DOT", "COLUMN", "ROW", 
			"BODY_END", "COLUMN_ROW_OPEN", "HOME_CLASS_CLOSE", "CHILDREN", "CHILDREN_DOT", 
			"CHILDREN_OPEN", "CHILDREN_END", "COLUMN_ROW_CLOSE", "STACK", "CONTAINER", 
			"CHILD_OPEN", "NESTED_CHILDREN", "CHILD_CLOSE", "CHILD_END", "CHILDREN_CLOSE", 
			"NESTED_CHILDREN_DOT", "NESTED_CHILDREN_OPEN", "NESTED_CHILDREN_END", 
			"NESTED_CONTAINER", "NESTED_CONTAINER_END", "NESTED_CHILDREN_CLOSE", 
			"CONTAINER_OPEN", "CONTAINER_CHILD_END", "CHILD", "CHILD_DOT", "ATTRIBUT", 
			"SINGLE_DOT", "FLOATINGACTIONBUTTON", "NETWOEK", "ATTRIBUT_OPEN", "ATTRIBUT_END", 
			"CONTAINER_CLOSE", "ATTRIBUT_DESCRIPTION", "ATTRIBUT_CLOSE", "BUTTON_OPEN", 
			"ONPRESSED", "ONPRESSED_BODY_OPEN", "BUTTON_CLOSE", "ONPRESSED_DOT", 
			"ONPRESSED_OPEN", "ONPRESSED_CLOSE", "NAVIGATOR", "NAVIGATOR_DOT", "PUSH", 
			"PUSH_OPEN", "NAVIGATOR_SIMI", "ONPRESSED_BODY_CLOSE", "NAVIGATOR_CONTEXT", 
			"NAVIGATOR_CONTEXT_SIMI", "PUSH_CLOSE", "MATERIALPAGEROUTE", "MATERIALPAGEROUTE_OPEN", 
			"BUILDER", "BUILDER_DOT", "MATERIALPAGEROUTE_BODY_OPEN", "MATERIALPAGEROUTE_CLOSE", 
			"NAVIGATOR_CONTEXT_END", "BUILDER_OPEN", "BUILDER_BUILDCONTEXT", "BUILDER_CLOSE", 
			"BUILDER_CONTEXT", "MATERIALPAGEROUTE_RETURN", "MATERIALPAGEROUTE_BODY_CLOSE", 
			"TARGET_CLASS", "TARGET_CLASS_OPEN", "TARGET_CLASS_CLOSE", "MATERIALPAGEROUTE_RETURN_SIMI", 
			"WHITESPACE1"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public VoidContext void_() {
			return getRuleContext(VoidContext.class,0);
		}
		public List<ClassContext> class_() {
			return getRuleContexts(ClassContext.class);
		}
		public ClassContext class_(int i) {
			return getRuleContext(ClassContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			void_();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(55);
				class_();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VoidContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(HTMLParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(HTMLParser.MAIN, 0); }
		public TerminalNode AROW() { return getToken(HTMLParser.AROW, 0); }
		public TerminalNode RUNAPP() { return getToken(HTMLParser.RUNAPP, 0); }
		public TerminalNode RUNAPP_OPEN() { return getToken(HTMLParser.RUNAPP_OPEN, 0); }
		public TerminalNode MAIN_CLASS() { return getToken(HTMLParser.MAIN_CLASS, 0); }
		public TerminalNode LEFT_BRAKETS() { return getToken(HTMLParser.LEFT_BRAKETS, 0); }
		public TerminalNode RIGHT_BRAKETS() { return getToken(HTMLParser.RIGHT_BRAKETS, 0); }
		public TerminalNode RUNAPP_CLOSE() { return getToken(HTMLParser.RUNAPP_CLOSE, 0); }
		public TerminalNode VOID_CLOSE() { return getToken(HTMLParser.VOID_CLOSE, 0); }
		public VoidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_void; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterVoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitVoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitVoid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VoidContext void_() throws RecognitionException {
		VoidContext _localctx = new VoidContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_void);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(VOID);
			setState(62);
			match(MAIN);
			setState(63);
			match(AROW);
			setState(64);
			match(RUNAPP);
			setState(65);
			match(RUNAPP_OPEN);
			setState(66);
			match(MAIN_CLASS);
			setState(67);
			match(LEFT_BRAKETS);
			setState(68);
			match(RIGHT_BRAKETS);
			setState(69);
			match(RUNAPP_CLOSE);
			setState(70);
			match(VOID_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(HTMLParser.CLASS, 0); }
		public TerminalNode CLASS_NAME() { return getToken(HTMLParser.CLASS_NAME, 0); }
		public TerminalNode CLASS_NAME_END() { return getToken(HTMLParser.CLASS_NAME_END, 0); }
		public TerminalNode EXTENDS() { return getToken(HTMLParser.EXTENDS, 0); }
		public Extend_classContext extend_class() {
			return getRuleContext(Extend_classContext.class,0);
		}
		public TerminalNode CLASS_OPEN() { return getToken(HTMLParser.CLASS_OPEN, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode CLASS_CLOSE() { return getToken(HTMLParser.CLASS_CLOSE, 0); }
		public TerminalNode STATE_OPEN() { return getToken(HTMLParser.STATE_OPEN, 0); }
		public TerminalNode STATE_CLASS() { return getToken(HTMLParser.STATE_CLASS, 0); }
		public TerminalNode STATE_CLOSE() { return getToken(HTMLParser.STATE_CLOSE, 0); }
		public ClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassContext class_() throws RecognitionException {
		ClassContext _localctx = new ClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(CLASS);
			setState(73);
			match(CLASS_NAME);
			setState(74);
			match(CLASS_NAME_END);
			setState(75);
			match(EXTENDS);
			setState(76);
			extend_class();
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STATE_OPEN) {
				{
				setState(77);
				match(STATE_OPEN);
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STATE_CLASS) {
				{
				setState(80);
				match(STATE_CLASS);
				}
			}

			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STATE_CLOSE) {
				{
				setState(83);
				match(STATE_CLOSE);
				}
			}

			setState(86);
			match(CLASS_OPEN);
			setState(87);
			class_body();
			setState(88);
			match(CLASS_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Extend_classContext extends ParserRuleContext {
		public TerminalNode BASE_CLASS() { return getToken(HTMLParser.BASE_CLASS, 0); }
		public TerminalNode STATE() { return getToken(HTMLParser.STATE, 0); }
		public Extend_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extend_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterExtend_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitExtend_class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitExtend_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Extend_classContext extend_class() throws RecognitionException {
		Extend_classContext _localctx = new Extend_classContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_extend_class);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !(_la==BASE_CLASS || _la==STATE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Class_bodyContext extends ParserRuleContext {
		public WidgetContext widget() {
			return getRuleContext(WidgetContext.class,0);
		}
		public TerminalNode OVERRIDE() { return getToken(HTMLParser.OVERRIDE, 0); }
		public StateContext state() {
			return getRuleContext(StateContext.class,0);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitClass_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitClass_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_class_body);
		int _la;
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OVERRIDE:
			case WIDGET:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OVERRIDE) {
					{
					setState(92);
					match(OVERRIDE);
					}
				}

				setState(95);
				widget();
				}
				break;
			case STATE_BODY:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				state();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StateContext extends ParserRuleContext {
		public TerminalNode STATE_BODY() { return getToken(HTMLParser.STATE_BODY, 0); }
		public TerminalNode STATE_OPEN() { return getToken(HTMLParser.STATE_OPEN, 0); }
		public TerminalNode STATE_CLASS() { return getToken(HTMLParser.STATE_CLASS, 0); }
		public TerminalNode STATE_CLOSE() { return getToken(HTMLParser.STATE_CLOSE, 0); }
		public TerminalNode CREAT_STATE() { return getToken(HTMLParser.CREAT_STATE, 0); }
		public TerminalNode STATE_AROW() { return getToken(HTMLParser.STATE_AROW, 0); }
		public TerminalNode STATE_MAIN_CLASS() { return getToken(HTMLParser.STATE_MAIN_CLASS, 0); }
		public TerminalNode STATE_MAIN_CLASS_OPEN() { return getToken(HTMLParser.STATE_MAIN_CLASS_OPEN, 0); }
		public TerminalNode STATE_MAIN_CLASS_CLOSE() { return getToken(HTMLParser.STATE_MAIN_CLASS_CLOSE, 0); }
		public TerminalNode STATE_MAIN_CLASS_SIMI() { return getToken(HTMLParser.STATE_MAIN_CLASS_SIMI, 0); }
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitState(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitState(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_state);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(STATE_BODY);
			setState(100);
			match(STATE_OPEN);
			setState(101);
			match(STATE_CLASS);
			setState(102);
			match(STATE_CLOSE);
			setState(103);
			match(CREAT_STATE);
			setState(104);
			match(STATE_AROW);
			setState(105);
			match(STATE_MAIN_CLASS);
			setState(106);
			match(STATE_MAIN_CLASS_OPEN);
			setState(107);
			match(STATE_MAIN_CLASS_CLOSE);
			setState(108);
			match(STATE_MAIN_CLASS_SIMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WidgetContext extends ParserRuleContext {
		public TerminalNode WIDGET() { return getToken(HTMLParser.WIDGET, 0); }
		public TerminalNode BUILD() { return getToken(HTMLParser.BUILD, 0); }
		public TerminalNode BUILD_OPEN() { return getToken(HTMLParser.BUILD_OPEN, 0); }
		public Build_braketsContext build_brakets() {
			return getRuleContext(Build_braketsContext.class,0);
		}
		public TerminalNode BUILD_CLOSE() { return getToken(HTMLParser.BUILD_CLOSE, 0); }
		public TerminalNode BUILD_BODY_OPEN() { return getToken(HTMLParser.BUILD_BODY_OPEN, 0); }
		public Build_bodyContext build_body() {
			return getRuleContext(Build_bodyContext.class,0);
		}
		public TerminalNode BUILD_BODY_CLOSE() { return getToken(HTMLParser.BUILD_BODY_CLOSE, 0); }
		public WidgetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_widget; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterWidget(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitWidget(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitWidget(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WidgetContext widget() throws RecognitionException {
		WidgetContext _localctx = new WidgetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_widget);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(WIDGET);
			setState(111);
			match(BUILD);
			setState(112);
			match(BUILD_OPEN);
			setState(113);
			build_brakets();
			setState(114);
			match(BUILD_CLOSE);
			setState(115);
			match(BUILD_BODY_OPEN);
			setState(116);
			build_body();
			setState(117);
			match(BUILD_BODY_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Build_braketsContext extends ParserRuleContext {
		public TerminalNode BUILDCONTEXT() { return getToken(HTMLParser.BUILDCONTEXT, 0); }
		public TerminalNode CONTEXT() { return getToken(HTMLParser.CONTEXT, 0); }
		public Build_braketsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_build_brakets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterBuild_brakets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitBuild_brakets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitBuild_brakets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Build_braketsContext build_brakets() throws RecognitionException {
		Build_braketsContext _localctx = new Build_braketsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_build_brakets);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(BUILDCONTEXT);
			setState(120);
			match(CONTEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
